# dagger

./: .changie.yaml  .daggerignore  .dockerignore  .env.dagger.json  .env.gha  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .golangci.yml  .goreleaser.common.yml  .goreleaser.nightly.yml  .goreleaser.prerelease.yml  .goreleaser.staydagger.yml  .goreleaser.yml  .markdownlint.yaml  .markdownlintignore  .mocharc.json  .readthedocs.yaml  .ruff.toml  .swp  .trivyignore  .trivyignore.yaml  AGENTS.md  AGENT_V2.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONFLICT_RESOLUTION.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEMO.md  DaggerSDK.sln  Dockerfile  Dockerfile.alpine  Dockerfile.ci  (+81 more)
crates/dagger-bootstrap/: Cargo.toml
crates/dagger-codegen/: CHANGELOG.md  Cargo.toml
crates/dagger-codegen/src/: codegen.rs  functions.rs  generator.rs  lib.rs  models.rs  predicates.rs  visitor.rs
crates/dagger-codegen/src/handlers/: enumeration.rs  fields.rs  input.rs  input_field.rs  mod.rs  object.rs  scalar.rs  type_ref.rs  utility.rs
crates/dagger-codegen/src/rust/: format.rs  functions.rs  mod.rs
crates/dagger-core/: CHANGELOG.md  Cargo.toml
crates/dagger-core/src/: cli_session.rs  config.rs  dagger.rs  downloader.rs  engine.rs  gql_client.rs  graphql_client.rs  introspection.rs  lib.rs  schema.rs  session.rs
crates/dagger-sdk/: CHANGELOG.md  Cargo.toml  README.md  test
crates/dagger-sdk/examples/build-the-application/: main.rs
crates/dagger-sdk/examples/caching/: main.rs
crates/dagger-sdk/examples/existing-dockerfile/: main.rs
crates/dagger-sdk/examples/first-pipeline/: main.rs
crates/dagger-sdk/examples/iss-30/: main.rs
crates/dagger-sdk/examples/iss-30-alt/: main.rs
crates/dagger-sdk/examples/multi-stage-build/: main.rs
crates/dagger-sdk/examples/publish-the-application/: main.rs
crates/dagger-sdk/examples/test-the-application/: main.rs
crates/dagger-sdk/examples_tests/: mod.rs
crates/dagger-sdk/src/: client.rs  gen.rs  lib.rs  querybuilder.rs
crates/dagger-sdk/tests/: mod.rs
crates/dagger-sdk/tests/issues/: iss_30.rs  mod.rs
sdk/python/: .changie.yaml  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  bootstrap.py  dagger.json  hatch.toml  pyproject.toml  requirements.txt  ruff.toml  ruff_defaults.toml  test_ast_registration.py
sdk/python/.changes/: v0.10.0.md  v0.10.1.md  v0.10.2.md  v0.10.3.md  v0.11.0.md  v0.11.1.md  v0.11.2.md  v0.11.3.md  v0.11.4.md  v0.11.5.md  v0.11.6.md  v0.11.7.md  v0.11.8.md  v0.11.9.md  v0.12.0.md  v0.12.1.md  v0.12.2.md  v0.12.3.md  v0.12.4.md  v0.12.5.md  v0.12.6.md  v0.12.7.md  v0.13.0.md  v0.13.1.md  v0.13.2.md  v0.13.3.md  v0.13.4.md  v0.13.5.md  v0.13.6.md  v0.13.7.md  v0.14.0.md  v0.15.0.md  v0.15.1.md  v0.15.2.md  v0.15.3.md  v0.15.4.md  v0.16.0.md  v0.16.1.md  v0.16.2.md  v0.16.3.md  (+75 more)
sdk/python/.changes/unreleased/: Added-20230727-114107.yaml  Added-20230728-182700.yaml  Added-20230731-195002.yaml  Added-20230829-004043.yaml  Added-20230831-182908.yaml  Added-20240408-172552.yaml  Added-20240723-134519.yaml  Added-20240912-101554.yaml  Added-20240916-122324.yaml  Added-20250416-112818.yaml  Added-20250616-113830.yaml  Breaking-20230727-115935.yaml  Breaking-20230802-174041.yaml  Breaking-20231130-154702.yaml  Breaking-20240627-142254.yaml  Breaking-20241122-121153.yaml  Breaking-20241209-120336.yaml  Breaking-20250807-101455.yaml  Changed-20230718-210219.yaml  Changed-20230726-105626.yaml  Changed-20240315-185005.yaml  Changed-20240711-131745.yaml  Changed-20240908-184152.yaml  Changed-20240909-221014.yaml  Changed-20241104-154658.yaml  Changed-20250731-175218.yaml  Changed-20260424-135430.yaml  Dependencies-20240723-134626.yaml  Dependencies-20240731-220643.yaml  Dependencies-20250513-122707.yaml  Dependencies-20250903-104915.yaml  Deprecated-20240801-112306.yaml  Deprecated-20240806-105313.yaml  Deprecated-20241103-124649.yaml  Deprecated-20250617-173038.yaml  Fixed-20231113-164527.yaml  Fixed-20240219-001920.yaml  Fixed-20240403-012801.yaml  Fixed-20240409-162155.yaml  Fixed-20240423-123556.yaml  (+13 more)
sdk/python/codegen/: pyproject.toml
sdk/python/codegen/tests/: test_generator.py
sdk/python/dagger/: .flake8  README.md  client.py  engine.py  pyproject.toml
sdk/python/dev/: .gitattributes  README.md  dagger.json  docs.go  go.mod  main.go  pyproject.toml
sdk/python/docs/: api.rst  client.rst  conf.py  connection.rst  exceptions.rst  index.rst  module.rst  requirements.txt
sdk/python/docs/_ext/: dagger_ext.py
sdk/python/examples/: README.md
sdk/python/examples/client-simple/: README.md  dagger.json  say.py  say_sync.py
sdk/python/experimental/ci/: dagger.json  pyproject.toml
sdk/python/experimental/demo/: dagger.json  main.py  pyproject.toml
sdk/python/experimental/hello/: dagger.json  main.py  pyproject.toml  requirements.txt
sdk/python/experimental/say/: dagger.json  main.py  pyproject.toml
sdk/python/requirements/: docs.txt  lint.txt  proj.txt  test.txt
sdk/python/runtime/: .gitattributes  .gitignore  Dockerfile  dagger.gen.go  dagger.json  discovery.go  extension.go  go.mod  go.sum  image.go  main.go  python.go  python_test.go  requirements.txt  utils.go
sdk/python/tests/: conftest.py
sdk/rust/: .changie.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  dagger.json
sdk/rust/.changes/: v0.15.2.md  v0.15.3.md  v0.15.4.md  v0.16.0.md  v0.16.1.md  v0.16.2.md  v0.16.3.md  v0.17.0.md  v0.17.1.md  v0.17.2.md  v0.18.0.md  v0.18.1.md  v0.18.10.md  v0.18.11.md  v0.18.12.md  v0.18.13.md  v0.18.14.md  v0.18.15.md  v0.18.16.md  v0.18.17.md  v0.18.18.md  v0.18.19.md  v0.18.2.md  v0.18.3.md  v0.18.4.md  v0.18.5.md  v0.18.6.md  v0.18.7.md  v0.18.8.md  v0.18.9.md  v0.19.0.md  v0.19.1.md  v0.19.10.md  v0.19.11.md  v0.19.2.md  v0.19.3.md  v0.19.4.md  v0.19.5.md  v0.19.6.md  v0.19.7.md  (+19 more)
sdk/rust/ci/: CHANGELOG.md  Cargo.toml
sdk/rust/examples/: README.md
sdk/rust/runtime/: dagger.json  go.mod  go.sum  main.go
toolchains/python/pytest_otel/: README.md  pyproject.toml
(+19662 files in other folders)
