[package]
name = "dagger-codegen"
version = "0.2.8"
edition = "2021"
readme = "README.md"
license-file = "LICENSE.MIT"
description = "dagger sdk codegen library"
repository = "https://github.com/kjuulh/dagger-rs"
publish = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dagger-core = { workspace = true }

eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

genco = "0.17.3"
convert_case = "0.6.0"
itertools = "0.10.5"

[dev-dependencies]
pretty_assertions = "1.3.0"
