[build-system]
requires = ["uv_build>=0.8.4,<0.10.0"]
build-backend = "uv_build"

[project]
name = "dagger-io"
version = "0.0.0"
description = "A client package for running Dagger pipelines in Python."
readme = "README.md"
authors = [{ name = "Dagger", email = "hello@dagger.io" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Framework :: AnyIO",
    "Framework :: Pytest",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "anyio>=3.6.2",
    "cattrs>=25.1.0",
    "gql[httpx]>=4.0",
    "beartype>=0.18.2",
    "platformdirs>=2.6.2",
    "typing_extensions>=4.13.0",
    "rich>=10.11.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-otlp-proto-http>=1.23.0",
    "opentelemetry-instrumentation-logging>=0.54b1",
    "exceptiongroup>=1.3.0",
]

[project.urls]
"Homepage" = "https://dagger.io"
"Documentation" = "https://docs.dagger.io/sdk/python"
"Repository" = "https://github.com/dagger/dagger/tree/main/sdk/python"
"Tracker" = "https://github.com/dagger/dagger/issues"
"Release Notes" = "https://github.com/dagger/dagger/releases?q=tag%3Asdk%2Fpython%2Fv0"
"Community" = "https://discord.gg/ufnyBtc8uY"
"Twitter" = "https://twitter.com/dagger_io"

[tool.uv]
dev-dependencies = [
    "codegen",
    # lint
    "ruff>=0.3.4",
    "mypy>=1.8.0",
    # test
    "aiohttp>=3.9.3",
    "pytest>=8.0.2",
    "pytest-httpx>=0.30.0",
    "pytest-mock>=3.12.0",
    "pytest-subprocess>=1.5.0",
    # docs
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
]

[tool.uv.sources]
codegen = { workspace = true }

[tool.uv.workspace]
members = ["codegen"]

[tool.uv.build-backend]
module-name = "dagger"
source-include = ["tests/**", "docs/**", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = ["--import-mode=importlib"]
markers = [
    "slow: mark test as slow (integration)",
    "provision: mark provisioning tests",
]

[tool.mypy]
disallow_untyped_defs = false
follow_imports = "normal"
# ignore_missing_imports = true
install_types = true
non_interactive = true
warn_redundant_casts = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true
