[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.19.8"
edition = "2021"
authors = ["kjuulh <contact@kasperhermansen.com>", "Dagger <hello@dagger.io>"]
repository = "https://github.com/dagger/dagger"

[workspace.dependencies]
dagger-codegen = { path = "crates/dagger-codegen" }
dagger-bootstrap = { path = "crates/dagger-bootstrap" }
dagger-sdk = { path = "crates/dagger-sdk", default-features = false }

eyre = "0.6.12"
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_graphql_input = { version = "0.1.2" }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.43", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = [
  "tracing-log",
  "tracing",
] }
thiserror = "2.0.17"
futures = "0.3.31"
derive_builder = "0.20.2"
base64 = "0.22.1"
dirs = "6.0.0"
flate2 = { version = "1.1.5", features = ["rust_backend"] }
graphql_client = { version = "0.15.0", features = [
  "reqwest-rustls",
  "graphql_query_derive",
], default-features = false }
hex = "0.4.3"
hex-literal = "1.1.0"
platform-info = "2.0.5"
reqwest = { version = "0.12.25", features = [
  "stream",
  "rustls-tls",
  "rustls-tls-native-roots",
  "system-proxy",
], default-features = false }
sha2 = "0.10.9"
tar = "0.4.44"
tempfile = "3.23.0"
async-trait = "0.1.89"
genco = "0.19.0"
convert_case = "0.10.0"
itertools = "0.14.0"

pretty_assertions = "1.4.1"
rand = "0.9.2"
tracing-test = "0.2.5"
clap = "4.5.53"
