[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.19.10"
edition = "2021"
authors = ["kjuulh <contact@kasperhermansen.com>", "Dagger <hello@dagger.io>"]
repository = "https://github.com/dagger/dagger"

[workspace.dependencies]
dagger-codegen = { path = "crates/dagger-codegen" }
dagger-bootstrap = { path = "crates/dagger-bootstrap" }
dagger-sdk = { path = "crates/dagger-sdk", default-features = false }

eyre = "0.6.9"
color-eyre = "0.6.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_graphql_input = { version = "0.1.1" }
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
  "tracing-log",
  "tracing",
] }
thiserror = "1.0.56"
futures = "0.3.30"
derive_builder = "0.12.0"
base64 = "0.21.6"
dirs = "5.0.1"
flate2 = { version = "1.0.28", features = ["rust_backend"] }
graphql_client = { version = "0.13.0", features = [
  "reqwest-rustls",
  "graphql_query_derive",
], default-features = false }
hex = "0.4.3"
hex-literal = "0.4.1"
platform-info = "2.0.2"
reqwest = { version = "0.11.23", features = [
  "stream",
  "rustls-tls",
], default-features = false }
sha2 = "0.10.8"
tar = "0.4.40"
tempfile = "3.9.0"
async-trait = "0.1.77"
genco = "0.17.8"
convert_case = "0.6.0"
itertools = "0.12.0"

pretty_assertions = "1.4.0"
rand = "0.8.5"
tracing-test = "0.2.4"
clap = "4.4.14"
