[project]
name = "codegen"
version = "0.0.0"
description = "Codegen for the Python SDK"
requires-python = ">= 3.10"
dependencies = [
    "graphql-core>=3.2.3",
]

[tool.uv]
preview = true
dev-dependencies = [
    "pytest>=8.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
