[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagger"
version = "0.0.1"
authors = [
  { name="Sam Alba", email="sam@dagger.io" },
]
description = "Dagger library"
#readme = "README.md"
#license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
#    "License :: OSI Approved :: MIT License",
#    "Operating System :: OS Independent",
]
dependencies = [
    "gql[requests] >= 3.4.0",
    "strawberry-graphql >= 0.130.3",
    "attrs >= 22.1.0",
    "cattrs >= 22.2.0",
]

[project.urls]
"Homepage" = "https://dagger.io/"
"Bug Tracker" = "https://github.com/dagger/dagger/issues"
