[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagger"
version = "0.1.0"
authors = [
  { name="Sam Alba", email="sam@dagger.io" },
]
description = "Dagger library"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
#    "Operating System :: OS Independent",
]
dependencies = [
    "gql[aiohttp,requests] ~= 3.4.0",
    "strawberry-graphql[cli] ~= 0.133.5",
    "attrs ~= 22.1.0",
    "cattrs ~= 22.2.0",
]

[project.urls]
"Homepage" = "https://dagger.io/"
"Bug Tracker" = "https://github.com/dagger/dagger/issues"

[project.scripts]
dagger-python = "dagger.cli:run"
