[project]
name = "main"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = ["dagger-io"]

[tool.dagger]
# Ensure the dev module works both with released and dev engine.
uv-version = "0.5.7"

[tool.uv.sources]
dagger-io = { path = "sdk", editable = true }

[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"
