[package]
name = "dagger-bootstrap"
description = "A bootstrapper for orchestrating codegen for the rust sdk"
version.workspace = true 
edition.workspace = true 
readme.workspace = true 
license-file.workspace = true 
authors.workspace = true 
repository.workspace = true 
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dagger-codegen = { workspace = true, default-features = false }
dagger-sdk = { workspace = true, default-features = false }

eyre = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap.workspace = true
