[package]
name = "dagger-codegen"
version = "0.2.8"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
description = "dagger sdk codegen library"
authors = ["kjuulh <contact@kasperhermansen.com>", "Dagger <hello@dagger.io>"]
repository = "https://github.com/dagger/dagger"
publish = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dagger-sdk = { workspace = true, default-features = false }

eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

genco = "0.17.8"
convert_case = "0.6.0"
itertools = "0.12.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
