[package]
name = "dagger-codegen"
description = "dagger sdk codegen library"
version.workspace = true 
edition.workspace = true 
readme.workspace = true 
license-file.workspace = true 
authors.workspace = true 
repository.workspace = true 
publish = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dagger-sdk = { workspace = true, default-features = false }

eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

genco.workspace = true
convert_case.workspace = true
itertools.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
