[package]
name = "dagger-sdk"
version = "0.3.1"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
authors = ["kjuulh <contact@kasperhermansen.com>", "Dagger <hello@dagger.io>"]
description = "A dagger sdk for rust, written in rust"
repository = "https://github.com/dagger/dagger"
publish = true

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

futures = "0.3.28"
derive_builder = "0.12.0"
base64 = "0.21.3"
dirs = "5.0.1"
flate2 = { version = "1.0.27", features = ["rust_backend"] }
graphql_client = { version = "0.13.0", features = [
  "reqwest-rustls",
  "graphql_query_derive",
], default-features = false }
hex = "0.4.3"
hex-literal = "0.3.1"
platform-info = "2.0.2"
reqwest = { version = "0.11.20", features = [
  "stream",
  "rustls-tls",
], default-features = false }

sha2 = "0.10.7"
tar = "0.4.40"
tempfile = "3.8.0"
async-trait = "0.1.73"


[dev-dependencies]
pretty_assertions = "1.4.0"
rand = "0.8.5"
tracing-test = "0.2.4"

[features]

default = ["gen"]
gen = []
